GNOME Bugzilla – Bug 756209
adaptivedemux: adaptive demux hangs if src element cannot be started
Last modified: 2015-10-30 12:24:10 UTC
gst_adaptive_demux_stream_download_uri will try to start the src element by calling gst_element_sync_state_with_parent. But the return code is not checked. If the src element does not start, the adaptive demux will wait forever for the eos event.
Created attachment 312860 [details] [review] proposed patch
It looks like the manifest lock should be reacquired when returning here. The patch does not apply cleanly to my state, but at least here, this function is called with the manifest lock, and can temporarily release it. Since the patch doesn't apply, maybe it's meant to apply after another one that removes this "called with manifest lock" state ?
Created attachment 314465 [details] [review] proposed patch updated patch. This ticket was raised before https://bugzilla.gnome.org/show_bug.cgi?id=755169 which made changes in this area.
I meant "ticket raised before 755169 fixes were merged"
Thanks. commit ef466b46d3353aa56b25663b74021e37c8bbcc82 Author: Florin Apostol <florin.apostol@oregan.net> Date: Wed Oct 7 23:20:51 2015 +0100 adaptivedemux: return error if src element cannot start https://bugzilla.gnome.org/show_bug.cgi?id=756209