adaptivedemux: return error if src element cannot start

https://bugzilla.gnome.org/show_bug.cgi?id=756209